# hackupc2026

./: .baseline_node_ids.txt  .env.example  .final_node_ids.txt  .gitignore  AGENT_SUMMARY.md  BRIEF.md  CLAUDE.md  CONTEXT.md  Makefile  PLAN.md  README.md  STORY.md  Technical Report.html  WALKTHROUGH.md  app.py  claude_code_prompt_location_page.md  data.md  deck (1).html  digital_twin_degradation_functions.md  digital_twin_implementation_audit.md  main.py  pyproject.toml  train.sh
Ai_Agent/: README.md  component_map.py  config.py  db.py  derived_metrics.py  forecast.py  graph.py  historian_seed.py  nodes.py  predictions.py  prompts.py  schemas.py  state.py  tools.py  trace.py  twin_data.py
ai-context/: README.md  climate_location_module.md  digital_twin_hp_metal_jet_s100_spec.md
backend/: README.md  app.py  main.py
backend/agent/: README.md  component_map.py  config.py  db.py  forecast.py  historian_seed.py  predictions.py  state.py  twin_data.py
backend/simulator/: __init__.py  generate.py  labels.py
backend/simulator/config/: cities_climate.yaml
backend/simulator/core/: degradation.py  simulator.py  weather.py
backend/simulator/weather/: build_dataset.py  real_weather.py  transform.py
challenge-context/: model-explan.md
data/: historian.db  weather_data.parquet
data/prediction/: weather_projected.parquet
data/raw/: openmeteo_barcelona.json  openmeteo_chicago.json  openmeteo_dubai.json  openmeteo_houston.json  openmeteo_london.json  openmeteo_mexico_city.json  openmeteo_moscow.json  openmeteo_mumbai.json  openmeteo_shanghai.json  openmeteo_singapore.json
data/train/: weather_real.parquet
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsPanel.tsx  AnimatedNumber.tsx  ChatPanel.tsx  (+10 more)
ml/: README.md  business_demo.py  cost_demo.py  train.ps1  train.sh
ml/00_eda/: README.md  REPORT.md  eda_fleet_baseline.ipynb
ml/01_baseline/: README.md  search.ipynb
ml/02_ssl/: 00_generate_policy_runs.ipynb  01_pretrain.ipynb  02_finetune_rul.ipynb  03_surrogate_search.ipynb  train_rul_head.py
ml/03_rl/: 00_setup_and_sanity.ipynb  01_train_ppo.ipynb  02_eval_test.ipynb  03_compare.ipynb  04_per_tick_recurrent_ppo.ipynb  README.md
ml/lib/: data.py  env_runner.py  fast.py  features.py  objective.py  plotting.py  stage4_report.py
ml_models/: README.md  __init__.py  train.ps1  train.sh
ml_models/00_eda/: README.md  REPORT.md  eda_fleet_baseline.ipynb
ml_models/01_baseline/: search.ipynb
ml_models/02_ssl/: 00_generate_policy_runs.ipynb  01_pretrain.ipynb  02_finetune_rul.ipynb  03_surrogate_search.ipynb  README.md  train_rul_head.py
ml_models/03_rl+ssl/: 00_setup_and_sanity.ipynb  01_train_ppo.ipynb  02_eval_test.ipynb  03_compare.ipynb  04_per_tick_recurrent_ppo.ipynb  README.md
ml_models/lib/: __init__.py  data.py  env_runner.py  fast.py  features.py  objective.py  plotting.py  splits.py
report/: AI_IMPLEMENTATION.md
scripts/: apply_fast_mode_edits.py  create-pr.sh  demo_e2e.py  diagnose_lifespans.py  migrate_notebook_imports.py  new-branch.sh  run-stack.sh
sdg/: generate.py  labels.py  schema.py
sdg/config/: cities.yaml  components.yaml  couplings.yaml
sdg/core/: __init__.py  component.py  degradation.py  simulator.py  weather.py
sdg/tests/: test_core.py  test_generation.py  test_weather_transform.py
sdg/weather/: build_dataset.py  download.py  real_weather.py
stt/: transcriber.py
tests/: conftest.py  test_app.py  test_component_map.py  test_forecast.py  test_guardrail.py  test_historian_seed.py  test_integration_e2e.py  test_stt.py  test_synthesizer.py  test_tools.py  test_twin_data.py  test_twin_endpoints.py
tests/integration/: test_integration_agent_grounding.py  test_integration_api_endpoints.py  test_integration_simulator_sdg.py  test_integration_twin_pipeline.py  test_integration_voice_pipeline.py
tests/simulator/: test_core.py  test_generation.py  test_weather_transform.py
tests/unit/: test_unit_agent.py  test_unit_api.py  test_unit_db.py  test_unit_ml_lib.py  test_unit_sdg_weather.py  test_unit_simulator.py  test_unit_voice.py
tts/: speaker.py
(+114 files in other folders)
