[project]
name = "hackupc2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "sdg/tests",
    "ml_models/01_baseline/tests",
    "ml_models/02_ssl/tests",
]
