[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Root `app.py` is the FastAPI entrypoint; only ship Python packages, not `frontend/` or `UI_EXAMPLE/`.
# Note `ml_models/03_rl+ssl/` is intentionally NOT a package — `+` is invalid in Python module names.
# Importable Stage 03 code lives under `ml_models.lib.rl`.
packages = [
    "Ai_Agent",
    "stt",
    "tts",
    "sdg", "sdg.config", "sdg.core", "sdg.weather",
    "ml_models", "ml_models.lib", "ml_models.lib.rl",
]
py-modules = ["app"]

[tool.pytest.ini_options]
# Live tests hit the real Groq LLM; keep them out of the default run so
# `uv run pytest` stays fast and offline. Opt in explicitly with `-m live`.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end tests that hit real external services (Groq LLM); require GROQ_API_KEY and network. Opt-in via `-m live`.",
]

[project]
name = "hackupc2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "faster-whisper>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "edge-tts>=6.1.12",
    "websockets>=12.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.9",
    "optuna>=4.8.0",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.8.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
